# OptimizationTest

./: README.md
documents/: body.json  Элементы ТЗ_Модели.docx
documents/Тестовый пример/: N_E_Ekvat_marked.docx  body.json
src/: AppSettings.h  CMakeLists.txt  Globals.h  Main.cpp  Stdafx.h
src/Algorithms/: AlgorithmHelpers.cpp  AlgorithmHelpers.h  FullEnumerationAlgorithm.cpp  FullEnumerationAlgorithm.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h
src/Models/: Bin.h  Data.cpp  Data.h  Entrance.h  IIdentity.h  IPosition.h  Model.cpp  Model.h
